--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
     <meta name="keywords"
           content="Radio, Online, Sakal">
     <meta name="description"
-          content="Enjoy online world radio stations">
+          content="Sunny-box is a next-generation of online radio">
     <meta name="copyright" content="Copyright (c) 2018 Sakal">
-    <title>Sterling</title>
+    <title>Sunny-box</title>
 </head>
 <body>
 <div id="app"></div>
